<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <Switch
        android:id="@+id/date_repeat_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:height="40dp"
        android:text="@string/date_repeat"/>

    <CalendarView
        android:id="@+id/calendarview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:maxDate="09/25/2016"
        android:minDate="09/25/2015"
        />

    <LinearLayout
        android:id="@+id/date_checkbox_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/monday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            />

        <CheckBox
            android:id="@+id/tuesday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            />

        <CheckBox
            android:id="@+id/wednesday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            />

        <CheckBox
            android:id="@+id/thursday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            />

        <CheckBox
            android:id="@+id/friday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            />

        <CheckBox
            android:id="@+id/saturday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            />

        <CheckBox
            android:id="@+id/sunday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            />

    </LinearLayout>

</LinearLayout>